@@ -68,8 +68,7 @@ namespace libtorrent
 
 	struct TORRENT_EXPORT create_torrent
 	{
-		create_torrent(file_storage& fs, int piece_size);
-		create_torrent(file_storage& fs);
+		create_torrent(file_storage& fs, int piece_size = 0, int pad_file_limit = -1);
 		create_torrent(torrent_info const& ti);
 		entry generate() const;
 
